# pyweb-hw-04

./: .gitignore  Dockerfile  README.md  pyproject.toml
pyweb_hw_04/: logs.txt  main.py  message.html
pyweb_hw_04/storage/: data.json
