[tool.poetry]
name = "pyweb-hw-04"
version = "0.1.0"
description = ""
authors = ["Spica12 <vitaly.savenko12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.11.0"
isort = "^5.12.0"
pylint = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
